# trading_web3

./: .gitignore  README.md  docker-compose.yml  makefile
backend/: Cargo.toml  Dockerfile
backend/common/proto/: auth_service.proto
backend/migrations/2024-05-26-123401_users/: up.sql
backend/src/: main.rs  schema.rs
backend/src/auth/: auth_service.rs  mod.rs
backend/src/models/: users.rs
backend/src/repositories/: users.rs
backend/src/routes/: authorize.rs  mod.rs  recover.rs  register.rs  reset.rs
backend/src/test/: authentication_test.rs  mod.rs
backend/src/utils/: validation.rs
blockchain/: Cargo.toml
blockchain/src/: account.rs  block.rs  blockchain.rs  main.rs  mempool.rs  stake.rs  transaction.rs  util.rs  validator.rs  wallet.rs
crypto_service/: Cargo.toml  Dockerfile  build.rs
crypto_service/debug/.fingerprint/anyhow-8d9b95ef1cd97ccf/: build-script-build-script-build  build-script-build-script-build.json
crypto_service/debug/.fingerprint/anyhow-bd8bb59a66d99f91/: lib-anyhow.json
crypto_service/debug/.fingerprint/anyhow-c343e6e40018be1b/: doc-lib-anyhow  doc-lib-anyhow.json
crypto_service/debug/.fingerprint/anyhow-e192ca5be2c00ecb/: run-build-script-build-script-build
crypto_service/debug/.fingerprint/async-stream-8e70b03bb5f99245/: doc-lib-async-stream  doc-lib-async-stream.json
crypto_service/debug/.fingerprint/async-stream-ccb853f105a74768/: lib-async-stream  lib-async-stream.json
crypto_service/debug/.fingerprint/async-stream-impl-8bd2ca4e178969e9/: doc-lib-async-stream-impl  doc-lib-async-stream-impl.json
crypto_service/debug/.fingerprint/async-stream-impl-f295e9bc25564171/: lib-async-stream-impl
crypto_service/debug/.fingerprint/async-trait-ae3019645b692b68/: lib-async-trait  lib-async-trait.json
crypto_service/debug/.fingerprint/async-trait-c9ca4789bf9cb486/: doc-lib-async-trait  doc-lib-async-trait.json
crypto_service/debug/.fingerprint/autocfg-f54d5eb740a16e5b/: lib-autocfg
crypto_service/debug/.fingerprint/axum-4b792b7fd459d1c3/: doc-lib-axum
crypto_service/debug/.fingerprint/axum-5915af0f73499676/: run-build-script-build-script-build
crypto_service/debug/.fingerprint/axum-core-236f97983749925b/: lib-axum-core
crypto_service/debug/.fingerprint/axum-core-249038affad8be26/: build-script-build-script-build  build-script-build-script-build.json
crypto_service/debug/.fingerprint/axum-core-e8f033b049e1f7ea/: doc-lib-axum-core  (+1 more)
crypto_service/src/: auth_server.rs  lib.rs  main.rs
crypto_service/src/auth/: auth_service.rs  authimpl.rs  mod.rs  zkp.rs
crypto_service/src/test/: client_test.rs  mod.rs
(+210 files in other folders)
