[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
prost = "0.12.6"
tonic = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
chrono = { version = "0.4.38", default-features = false }
actix-service = "2.0.2"
ed25519-compact = "2.1.1"
actix-jwt-auth-middleware = "0.5.0"
rand_core = "0.6.4"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
tokio = { version = "1.37.0", features = ["sync"] }
actix-http = "3.7.0"


[build-dependencies]
tonic-build = "0.11.0"
