[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
ed25519-compact = "2.1.1"
hex = "0.4.3"
libp2p = { version = "0.53.2", features = ["floodsub", "mdns", "tcp", "noise", "tokio"] }
tokio = { version = "1.38", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
log = "0.4.21"
num-bigint = "0.4.5"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
periodic = "0.1.1"
